# uxuro

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  makefile.cu
benchmarks/: Makefile.am  Makefile.in  benchmark.h
benchmarks/micro/: Makefile.am  Makefile.in  mb_advise.cu  mb_common.cu  mb_common.h  mb_compute_pi.cu  mb_copy.cu  mb_matrixmul.cu  mb_random.cu  mb_relay.cu  mb_stream.cu  mb_vectoradd.cu
examples/: Makefile.am  Makefile.in  run.func.sh
examples/BlackScholes/: BlackScholes.cu  BlackScholes_kernel.cuh  Makefile.am  Makefile.in  generator.cu
examples/backprop/: Makefile.am  Makefile.in  backprop.c  backprop.h  backprop_cuda_kernel.cuh  backprop_train.cu  bpnn.c  bpnn.h  cudaio.c  cudaio.h  cuhelper.h  generator.c  timer.c  timer.h
examples/backprop/programs/cudamemcpy/: Makefile.am  Makefile.in  backprop.c  backprop_cuda.cu  facetrain.c  generator.c
examples/backprop/programs/hostreg/: Makefile.am  Makefile.in  backprop.cu  facetrain.c
examples/backprop/programs/lib/: Makefile.am  Makefile.in  imagenet.c
examples/backprop/programs/nvmgpu/: Makefile.am  Makefile.in  backprop.cu  backprop_cuda.cu  facetrain.c
examples/backprop/programs/uvm/: Makefile.am  Makefile.in  backprop.cu  backprop_cuda_kernel.cu  facetrain.c
examples/binomialOptions/: Makefile.am  Makefile.in  binomialOptions.cu  binomialOptions_common.h  binomialOptions_gen.c  binomialOptions_kernel.cu
examples/common/: Makefile.am  Makefile.in  cudaio.c  cudaio.h
examples/hotspot/: Makefile.am  Makefile.in  hotspot.cu  hotspot_gen.cpp
examples/lavaMD/: Makefile.am  Makefile.in  kernel_gpu_cuda.cu  lavaMD.cu  lavaMD.h  lavaMD_gen.c
examples/pathfinder/: Makefile.am  Makefile.in  pathfinder.cu  pathfinder_gen.c
examples/srad_v2/: Makefile.am  Makefile.in  srad.cu  srad_gen.c  srad_kernel.cu
examples/vectorAdd/: Makefile.am  Makefile.in  vectorAdd.cu  vectorAdd_gen.c
kernel_nvidia/: Kbuild  Makefile  conftest.sh
kernel_nvidia.450.80.2/: Kbuild  conftest.sh
kernel_nvidia.450.80.2/common/inc/: cpuopsys.h  nv-linux.h  nv-proto.h  nv-time.h  nv.h  nv_uvm_interface.h  nv_uvm_types.h  nvkms-api-types.h  nvkms-kapi.h  nvmisc.h  nvtypes.h  os-interface.h  (+1 more)
kernel_nvidia.450.80.2/nvidia/: export_nvswitch.h  linux_nvswitch.c  linux_nvswitch.h  nv-acpi.c  nv-caps.c  nv-dma.c  nv-i2c.c  nv-mmap.c  nv-p2p.c  nv-pat.c  nv-pci.c  nv-procfs.c  nv-reg.h  nv-usermap.c  nv-vm.c  nv.c  nvidia.Kbuild  nvlink_common.h  nvlink_linux.c  nvlink_os.h  os-interface.c  os-mlock.c  os-pci.c  os-registry.c
kernel_nvidia.450.80.2/nvidia-drm/: nvidia-drm-crtc.c  nvidia-drm-crtc.h  nvidia-drm-drv.c  nvidia-drm-encoder.c  nvidia-drm-fb.c  nvidia-drm-fb.h  nvidia-drm-gem-nvkms-memory.c  nvidia-drm-gem-nvkms-memory.h  nvidia-drm-gem-user-memory.c  nvidia-drm-gem-user-memory.h  nvidia-drm-gem.c  nvidia-drm-gem.h  nvidia-drm-helper.h  nvidia-drm-ioctl.h  nvidia-drm-modeset.c  nvidia-drm-prime-fence.c  nvidia-drm-priv.h  nvidia-drm.Kbuild
kernel_nvidia.450.80.2/nvidia-modeset/: nv-modeset-kernel.o_binary  nvidia-modeset-linux.c  nvidia-modeset-os-interface.h
kernel_nvidia.450.80.2/nvidia-uvm/: ctrl2080mc.h  nvidia-uvm-sources.Kbuild  nvidia-uvm.Kbuild  nvstatus.c  uvm.h  uvm8.c  uvm8_ampere.c  uvm8_ampere_ce.c  uvm8_ampere_fault_buffer.h  uvm8_ampere_host.c  uvm8_ampere_mmu.c  uvm8_api.h  uvm8_ats_faults.h  uvm8_ats_ibm.c  uvm8_ats_ibm.h  uvm8_ce_test.c  uvm8_channel.c  uvm8_channel_test.c  uvm8_fault_buffer_flush_test.c  uvm8_forward_decl.h  uvm8_get_rm_ptes_test.c  uvm8_global.c  uvm8_global.h  uvm8_gpu.c  uvm8_gpu.h  uvm8_gpu_access_counters.c  uvm8_gpu_access_counters.h  uvm8_gpu_isr.c  uvm8_gpu_isr.h  uvm8_gpu_non_replayable_faults.c  uvm8_gpu_non_replayable_faults.h  uvm8_gpu_replayable_faults.c  uvm8_gpu_replayable_faults.h  uvm8_gpu_semaphore.c  uvm8_gpu_semaphore_test.c  uvm8_hal.c  uvm8_hal.h  uvm8_hal_types.h  uvm8_hmm.c  uvm8_hmm.h  (+87 more)
kernel_nvidia/nvidia/: linux_nvswitch.c  nv-acpi.c  nv-dma.c  nv-frontend.c  nv-i2c.c  nv-ibmnpu.c  nv-mmap.c  nv-msi.c  nv-p2p.c  nv-pat.c  nv-pci.c  nv-procfs.c  nv-usermap.c  nv-vm.c  nv.c  nv_uvm_interface.c  nvidia-sources.Kbuild  nvidia.Kbuild  nvlink_linux.c  os-interface.c  os-mlock.c  os-registry.c
kernel_nvidia/nvidia-drm/: nvidia-drm-crtc.c  nvidia-drm-crtc.h  nvidia-drm-drv.c  nvidia-drm-fb.c  nvidia-drm-fb.h  nvidia-drm-gem-nvkms-memory.c  nvidia-drm-gem-nvkms-memory.h  nvidia-drm-gem-user-memory.c  nvidia-drm-gem.c  nvidia-drm-gem.h  nvidia-drm-helper.c  nvidia-drm-helper.h  nvidia-drm-ioctl.h  nvidia-drm-linux.c  nvidia-drm-prime-fence.c  nvidia-drm-utils.c  nvidia-drm-utils.h  nvidia-drm.Kbuild
kernel_nvidia/nvidia-modeset/: nv-modeset-kernel.o_binary  nvidia-modeset-linux.c  nvidia-modeset.Kbuild
kernel_nvidia/nvidia-uvm/: nvidia-uvm-sources.Kbuild  nvidia-uvm.Kbuild  nvstatus.c  uvm8.c  uvm8_api.h  uvm8_ats_faults.c  uvm8_ats_ibm.c  uvm8_ats_ibm.h  uvm8_channel.c  uvm8_channel_test.c  uvm8_fault_buffer_flush_test.c  uvm8_get_rm_ptes_test.c  uvm8_global.c  uvm8_global.h  uvm8_gpu.c  uvm8_gpu.h  uvm8_gpu_access_counters.c  uvm8_gpu_isr.c  uvm8_gpu_non_replayable_faults.c  uvm8_gpu_replayable_faults.c  uvm8_hal.c  uvm8_hmm.c  uvm8_kepler.c  uvm8_kepler_ce.c  uvm8_kepler_host.c  uvm8_kepler_mmu.c  uvm8_lock.c  uvm8_lock.h  uvm8_lock_test.c  uvm8_map_external.c  uvm8_maxwell.c  uvm8_mem.c  uvm8_mem_test.c  uvm8_migrate.c  uvm8_migrate_pageable.c  uvm8_mmu.c  uvm8_nvmgpu.c  uvm8_nvmgpu.h  uvm8_page_tree_test.c  uvm8_pascal.c  (+52 more)
m4/: cuda.m4
scripts/: benchhelper.sh
tests/: Makefile.am  Makefile.in
tests/sanity-basic/: Makefile  Makefile.am  Makefile.in  read.cu  write.cu
tests/unit-test/: Makefile.am  Makefile.in  basictest.cu  overscription.cu  unit_test.h  ut-overscription.cu  ut-readonly.cu  ut-readwrite.cu  ut-writeonly.cu
tools/: Makefile.am  Makefile.in
tools/kmsglog/: Makefile.am  Makefile.in  kmsglog.c
tools/plot/: data.py  data_batches.py  data_evict_faults.py  data_evicts.py  data_faults.py  plot.py  plot_batches.py  plot_evict_faults.py  plot_evicts.py  plot_faults.py
(+2 files in other folders)
